test/fail/issue-3585/Field.mo
module {
  public var x = 1; // rejected as non-static
}
